# lcsim

./: .gitignore  CMakeLists.txt
config/: sensors.json  sensors_dual.json  sensors_gopro_in.json  sensors_gopro_indv_fb.json  sensors_gopro_indv_fb2.json  sensors_gopro_out.json  sensors_gopro_out_fb.json  sensors_kitti.json  sensors_multi_bike.json  sensors_multi_car.json  sensors_orig.json  sensors_real.json  sensors_single.json
js/: index.html
js/js/: frontend.js
lcsim/include/lcsim/: algo.h  class.h  common.h  depth.h  dprocessor.h  fitting.h  planning.h  poly34.h  util.h
lcsim/src/: algo.cpp  class.cpp  depth.cpp  dprocessor.cpp  fitting.cpp  planning.cpp  util.cpp
python/: curtain_nodes.py  curtain_solve.py  curtain_splitting.py  helper.py  light_curtain.py  planner.out  planner.py  pylc.py  pylc_converters.hpp  pylc_lib.cpp  sensor_real.json  sim.py
python/example/: confidence_map.npy  dpv.npy
